fix(service): 优化系统资源清理方法和进程执行逻辑
- 简化 pruneStep 方法，移除 HTTP 方法参数，固定为 POST 请求
- 更新 prune 步骤参数调用，去除多余的 HTTP 方法传递
- 用 Files.readString 替代 Files.readAllBytes 和字符串构造，简化读取 /proc/uptime
- 修改 exec 方法取消超时参数，使用固定 20 秒超时并增强进程销毁处理
- 调整 curl 命令构建代码，去除超时参数传递，改用固定超时值
- 累计释放空间逻辑保持不变，确保清理资源准确统计